# codecontext-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  verify.py
src/codecontext/: __init__.py  __main__.py
src/codecontext/agents/: base.py  tools.py
src/codecontext/analysis/: __init__.py  package_cache.py  test_patterns.py
src/codecontext/cli/: main.py
src/codecontext/cli/commands/: ask.py  generate.py  index.py  init.py
src/codecontext/core/: codebase.py  config.py  parser.py
src/codecontext/search/: __init__.py  mongodb_setup.py  vectorstore.py
tests/integration/: test_cli_integration.py  test_full_workflow.py
tests/unit/agents/: agent_tools.py
tests/unit/analysis/: test_dependencies.py  test_test_patterns.py  test_venv_scanner.py
tests/unit/search/: test_vectorstore.py
